# museoman

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  spec.md
apps/accounts/: admin.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_models.py  test_views.py
apps/audit/: admin.py  models.py  services.py
apps/audit/migrations/: 0001_initial.py  0002_add_item_vitrina_actions.py  0003_auditlog_field_alter_auditlog_from_state_and_more.py
apps/audit/tests/: test_services.py
apps/catalog/: admin.py  forms.py  models.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_vitrina_add_nombre_auto_numero.py  0003_add_url_to_vitrina.py  0004_remove_numero.py
apps/catalog/tests/: test_models.py
apps/dashboard/: about_urls.py  apps.py  services.py  views.py
apps/items/: admin.py  apps.py  forms.py  models.py  state.py  urls.py  views.py
config/: settings.py  test_settings.py  urls.py
scripts/: local_import.py
static/css/: main.css
templates/: base.html
templates/accounts/: login.html  password_change.html  password_change_done.html  user_form.html  user_list.html
templates/catalog/: confirm_delete.html  tipo_form.html  tipo_list.html  vitrina_form.html  vitrina_list.html
templates/dashboard/: about.html  dashboard.html
templates/items/: item_audit_log.html  item_detail.html  item_form.html  item_list.html
(+19 files in other folders)
